--- a/back/package.json
+++ b/back/package.json
@@ -15,7 +15,8 @@
   "type": "commonjs",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app.ts"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
